[project]
name = "twitter-mcp"
version = "0.1.1"
description = "A twitter MCP server"
authors = [
    {name = "yanrujing", email = "rujing.yan@protagonist-ai.com"}
]
repository = "https://github.com/protagolabs/exmaple-mcp"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp (>=1.6.0,<2.0.0)",
    "tweepy (==4.16.0)",
]

packages = [{ include = "src/example_mcp" }]


[tool.poetry.scripts]
twitter-mcp = "twitter_mcp:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

